--- a/src/app/marks/marks.component.css
+++ b/src/app/marks/marks.component.css
@@ -9,6 +9,17 @@
     justify-content: center;
     align-items: center;
   }
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   
   .modal-content {
     background-color: #fff;
@@ -122,3 +133,6 @@
     opacity: 1;
   }
 }
+
+
+
