--- a/src/app/marks/marks.component.html
+++ b/src/app/marks/marks.component.html
@@ -33,7 +33,7 @@
   
     <div class="mt-5 text-center">
       <button (click)="openModal()" class="bg-purple-500 text-white px-4 py-2 rounded">Add New Student</button>
-      <button (click)="viewAllCharts()" class="bg-teal-500 text-white px-4 py-2 rounded ml-4">View All Charts</button>
+      <button (click)="openChartModal()" class="bg-teal-500 text-white px-4 py-2 rounded ml-4">View All Charts</button>
     </div>
 
     <!-- modal -->
@@ -157,6 +157,16 @@
         <button type="button" class="btn btn-secondary" (click)="closeUpdateModal()">Cancel</button>
       </form>
     </div>
+
+
+    <!-- Modal -->
+<div *ngIf="showchartModal" class="modal-overlay">
+  <div class="modal-content">
+    <h2>Overall Performance</h2>
+    <div id="chart" style="width: 100%; height: 400px;"></div>
+    <button (click)="closeChartModal()" class="close-modal-btn">Close</button>
+  </div>
+</div>
     
   </div>
   
